maj-tokenizer